[gd_scene load_steps=6 format=4 uid="uid://dgeb2v3rphddf"]

[ext_resource type="Texture2D" uid="uid://cefp2rc730r30" path="res://sprites/tiles/world_tiles_16.png" id="1_4rhbv"]
[ext_resource type="Script" path="res://scripts/village_view.gd" id="1_ayspc"]
[ext_resource type="PackedScene" uid="uid://c3n06ik3fjjbq" path="res://scenes/menu_ui.tscn" id="2_11uop"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_idbj1"]
texture = ExtResource("1_4rhbv")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSet" id="TileSet_6fd84"]
sources/0 = SubResource("TileSetAtlasSource_idbj1")

[node name="VillageView" type="Node2D"]
script = ExtResource("1_ayspc")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(1, 0)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAAAAAAAAAABAA0AAAAAAAAAAAABAA4AAAAAAAAAAAABAA8AAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAABAAAAAAACAAcAAAABAAAAAAACAAgAAAABAAAAAAACAAkAAAABAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAAAAAAAAAACAA0AAAAAAAAAAAACAA4AAAAAAAAAAAACAA8AAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAABAAAAAAADAAQAAAABAAAAAAADAAUAAAABAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAABAAAAAAADAAoAAAABAAAAAAADAAsAAAABAAAAAAADAAwAAAABAAAAAAADAA0AAAAAAAAAAAADAA4AAAAAAAAAAAADAA8AAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAABAAAAAAAEAAIAAAABAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAEAAwAAAAAAAAAAAAEAA0AAAABAAAAAAAEAA4AAAABAAAAAAAEAA8AAAAAAAAAAAAFAAAAAAABAAAAAAAFAAEAAAABAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAFAA0AAAAAAAAAAAAFAA4AAAABAAAAAAAFAA8AAAABAAAAAAAGAAAAAAABAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAFAAAAAAAGAAQAAAAFAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAFAAAAAAAGAAcAAAAFAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAABAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAEAAAAAAAGAAwAAAAEAAAAAAAGAA0AAAAAAAAAAAAGAA4AAAAAAAAAAAAGAA8AAAABAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAFAAAAAAAHAAQAAAAFAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAFAAAAAAAHAAcAAAAFAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAABAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAEAAAAAAAHAAwAAAAEAAAAAAAHAA0AAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAFAAAAAAAIAAIAAAAFAAAAAAAIAAMAAAAFAAAAAAAIAAQAAAAFAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAABAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAEAAAAAAAIAAwAAAAEAAAAAAAIAA0AAAAAAAAAAAAIAA4AAAAEAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAFAAAAAAAJAAQAAAAFAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAwAAAAAAAAAAAAJAA0AAAAEAAAAAAAJAA4AAAAEAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAQAAAAFAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAsAAAAAAAAAAAAKAAwAAAAAAAAAAAAKAA0AAAAEAAAAAAAKAA4AAAAEAAAAAAAKAA8AAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAEAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAEAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAEAAAAAAAOAAQAAAAEAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAQAAAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAADAAAAAAAQAA0AAAADAAAAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAACAAAAAAARAAMAAAADAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAARAAsAAAAAAAAAAAARAAwAAAAAAAAAAAARAA0AAAACAAAAAAASAAAAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAYAAAAAAAAAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAAoAAAAAAAAAAAASAAsAAAAAAAAAAAASAAwAAAAAAAAAAAASAA0AAAAAAAAAAAASAA8AAAAAAAAAAAATAAAAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAEAAAAAAATAAcAAAAEAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAATAAsAAAAAAAAAAAATAAwAAAAFAAAAAAATAA0AAAAFAAAAAAATAA8AAAAAAAAAAAAUAAAAAAAAAAAAAAAUAAEAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAQAAAAEAAAAAAAUAAUAAAAEAAAAAAAUAAYAAAAEAAAAAAAUAAcAAAAEAAAAAAAUAAgAAAAAAAAAAAAUAAkAAAAAAAAAAAAUAAoAAAAAAAAAAAAUAAsAAAAAAAAAAAAUAAwAAAAFAAAAAAAUAA0AAAAFAAAAAAAUAA4AAAAFAAAAAAAUAA8AAAAAAAAAAAAVAAAAAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAYAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAAAAAAAAAAVAAkAAAAAAAAAAAAVAAoAAAAAAAAAAAAVAAsAAAAFAAAAAAAVAAwAAAAFAAAAAAAVAA0AAAAAAAAAAAAVAA4AAAAAAAAAAAAVAA8AAAAAAAAAAAAWAAAAAAABAAAAAAAWAAEAAAAAAAAAAAAWAAIAAAAAAAAAAAAWAAMAAAAAAAAAAAAWAAQAAAADAAAAAAAWAAUAAAACAAAAAAAWAAYAAAACAAAAAAAWAAcAAAACAAAAAAAWAAgAAAACAAAAAAAWAAkAAAACAAAAAAAWAAoAAAAAAAAAAAAWAAsAAAAFAAAAAAAWAAwAAAAFAAAAAAAWAA0AAAAAAAAAAAAWAA4AAAAAAAAAAAAWAA8AAAAAAAAAAAAXAAAAAAAAAAAAAAAXAAEAAAABAAAAAAAXAAIAAAABAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAACAAAAAAAXAAUAAAACAAAAAAAXAAYAAAACAAAAAAAXAAcAAAACAAAAAAAXAAgAAAADAAAAAAAXAAkAAAACAAAAAAAXAAoAAAAAAAAAAAAXAAsAAAAAAAAAAAAXAAwAAAAAAAAAAAAXAA0AAAAAAAAAAAAXAA4AAAAAAAAAAAAXAA8AAAABAAAAAAAYAAAAAAAAAAAAAAAYAAEAAAAAAAAAAAAYAAIAAAABAAAAAAAYAAMAAAABAAAAAAAYAAQAAAAAAAAAAAAYAAUAAAAAAAAAAAAYAAYAAAAAAAAAAAAYAAcAAAAAAAAAAAAYAAgAAAAAAAAAAAAYAAkAAAAAAAAAAAAYAAoAAAAAAAAAAAAYAAsAAAAAAAAAAAAYAAwAAAAAAAAAAAAYAA0AAAAAAAAAAAAYAA4AAAABAAAAAAAYAA8AAAABAAAAAAAZAAAAAAAAAAAAAAAZAAEAAAAAAAAAAAAZAAIAAAAAAAAAAAAZAAMAAAABAAAAAAAZAAQAAAABAAAAAAAZAAUAAAABAAAAAAAZAAYAAAAAAAAAAAAZAAcAAAAAAAAAAAAZAAgAAAAAAAAAAAAZAAkAAAAAAAAAAAAZAAoAAAAAAAAAAAAZAAsAAAAAAAAAAAAZAAwAAAABAAAAAAAZAA0AAAABAAAAAAAZAA4AAAABAAAAAAAZAA8AAAAAAAAAAAAaAAAAAAAAAAAAAAAaAAEAAAAAAAAAAAAaAAIAAAAAAAAAAAAaAAMAAAAAAAAAAAAaAAQAAAAAAAAAAAAaAAUAAAABAAAAAAAaAAYAAAABAAAAAAAaAAcAAAABAAAAAAAaAAgAAAABAAAAAAAaAAkAAAABAAAAAAAaAAoAAAABAAAAAAAaAAsAAAABAAAAAAAaAAwAAAAAAAAAAAAaAA0AAAAAAAAAAAAaAA4AAAAAAAAAAAAaAA8AAAAAAAAAAAAbAAAAAAAAAAAAAAAbAAEAAAAAAAAAAAAbAAIAAAAAAAAAAAAbAAMAAAAAAAAAAAAbAAQAAAAAAAAAAAAbAAUAAAAAAAAAAAAbAAYAAAAAAAAAAAAbAAcAAAAAAAAAAAAbAAgAAAAAAAAAAAAbAAkAAAAAAAAAAAAbAAoAAAAAAAAAAAAbAAsAAAAAAAAAAAAbAAwAAAAAAAAAAAAbAA0AAAAAAAAAAAAbAA4AAAAAAAAAAAAbAA8AAAAAAAAAAAAcAAAAAAAAAAAAAAAcAAEAAAAAAAAAAAAcAAIAAAAAAAAAAAAcAAMAAAAAAAAAAAAcAAQAAAAAAAAAAAAcAAUAAAAAAAAAAAAcAAYAAAAAAAAAAAAcAAcAAAAAAAAAAAAcAAgAAAAAAAAAAAAcAAkAAAAAAAAAAAAcAAoAAAAAAAAAAAAcAAsAAAAAAAAAAAAcAAwAAAAAAAAAAAAcAA0AAAAAAAAAAAAcAA4AAAAAAAAAAAAcAA8AAAAAAAAAAAAdAAAAAAAAAAAAAAAdAAEAAAAAAAAAAAAdAAIAAAAAAAAAAAAdAAMAAAAAAAAAAAAdAAQAAAAAAAAAAAAdAAUAAAAAAAAAAAAdAAYAAAAAAAAAAAAdAAcAAAAAAAAAAAAdAAgAAAAAAAAAAAAdAAkAAAAAAAAAAAAdAAoAAAAAAAAAAAAdAAsAAAAAAAAAAAAdAAwAAAAAAAAAAAAdAA0AAAAAAAAAAAAdAA4AAAAAAAAAAAAJAA8AAAAAAAAAAAAIAA8AAAAEAAAAAAAHAA8AAAAEAAAAAAAHAA4AAAAEAAAAAAAdAA8AAAAAAAAAAAAAAAQAAAAAAAAAAAAKAAoAAAAAAAAAAAASAA4AAAAAAAAAAAATAA4AAAAFAAAAAAAJAAIAAAAFAAAAAAAJAAMAAAAFAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAFAAAAAAAMAAIAAAAEAAAAAAANAAIAAAAEAAAAAAAOAAIAAAAEAAAAAAAOAAMAAAAEAAAAAAAPAAMAAAAAAAAAAAAQAAMAAAADAAAAAAAQAAQAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAASAAUAAAAAAAAAAAATAAUAAAAEAAAAAAATAAYAAAAEAAAAAAALAAUAAAAAAAAAAAAMAAUAAAAAAAAAAAANAAUAAAAAAAAAAAAOAAUAAAAAAAAAAAAPAAUAAAAAAAAAAAAQAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAADAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAACAAAAAAANAAgAAAAAAAAAAAANAAkAAAACAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAYAAAADAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAACAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAADAAAAAAAOAAsAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAACAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAACAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAADAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAAQAAsAAAAAAAAAAAALAA0AAAAAAAAAAAALAA4AAAAAAAAAAAAMAA0AAAAEAAAAAAAMAA4AAAAEAAAAAAANAA0AAAAEAAAAAAANAA4AAAAEAAAAAAAOAA0AAAAEAAAAAAAOAA4AAAAEAAAAAAAPAA0AAAAAAAAAAAAPAA4AAAAAAAAAAAALAAwAAAAAAAAAAAAMAAwAAAAAAAAAAAANAAwAAAAAAAAAAAAOAAwAAAAAAAAAAAAPAAwAAAAAAAAAAAALAA8AAAAAAAAAAAAMAA8AAAAAAAAAAAANAA8AAAAAAAAAAAAOAA8AAAAAAAAAAAAPAA8AAAAAAAAAAAAQAAwAAAAAAAAAAAAQAA4AAAACAAAAAAARAA4AAAADAAAAAAARAA8AAAAAAAAAAAAQAA8AAAAAAAAAAAA=")
tile_set = SubResource("TileSet_6fd84")

[node name="MenuUI" parent="." instance=ExtResource("2_11uop")]

[node name="villageData" type="Node" parent="."]

[node name="VILLAGE DATA" type="Label" parent="villageData"]
offset_left = 1.0
offset_right = 121.0
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.905882, 1, 0, 0.803922)
text = "VILLAGE DATA"

[node name="name" type="Label" parent="villageData"]
offset_left = 1.0
offset_top = 23.0
offset_right = 51.0
offset_bottom = 39.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "name:"

[node name="nameData" type="Label" parent="villageData/name"]
layout_mode = 0
offset_left = 50.0
offset_top = 2.5
offset_right = 90.0
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"

[node name="location" type="Label" parent="villageData"]
offset_top = 16.0
offset_right = 90.0
offset_bottom = 32.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "location:"

[node name="locationData" type="Label" parent="villageData/location"]
layout_mode = 0
offset_left = 87.5
offset_top = 2.5
offset_right = 127.5
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"

[node name="fieldAmount" type="Label" parent="villageData"]
offset_left = 1.0
offset_top = 9.0
offset_right = 61.0
offset_bottom = 25.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "filds:"

[node name="fieldAmountData" type="Label" parent="villageData/fieldAmount"]
layout_mode = 0
offset_left = 57.5
offset_top = 2.5
offset_right = 97.5
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"

[node name="resourceAmount" type="Node" parent="."]

[node name="resources" type="Label" parent="resourceAmount"]
offset_left = 1.0
offset_top = 46.0
offset_right = 91.0
offset_bottom = 62.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.905882, 1, 0, 0.803922)
text = "RESOURCES"

[node name="food" type="Label" parent="resourceAmount"]
offset_left = 39.0
offset_top = 53.0
offset_right = 89.0
offset_bottom = 69.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "food:"

[node name="foodData" type="Label" parent="resourceAmount/food"]
layout_mode = 0
offset_left = 50.0
offset_top = 2.5
offset_right = 90.0
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"

[node name="water" type="Label" parent="resourceAmount"]
offset_left = 1.0
offset_top = 60.0
offset_right = 61.0
offset_bottom = 76.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "water:"

[node name="waterData" type="Label" parent="resourceAmount/water"]
layout_mode = 0
offset_left = 57.5
offset_top = 2.5
offset_right = 97.5
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"

[node name="metal" type="Label" parent="resourceAmount"]
offset_left = 1.0
offset_top = 53.0
offset_right = 61.0
offset_bottom = 69.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "metal:"

[node name="metalData" type="Label" parent="resourceAmount/metal"]
layout_mode = 0
offset_left = 57.5
offset_top = 2.5
offset_right = 97.5
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"

[node name="wood" type="Label" parent="resourceAmount"]
offset_left = 40.0
offset_top = 60.0
offset_right = 90.0
offset_bottom = 76.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "wood:"

[node name="woodData" type="Label" parent="resourceAmount/wood"]
layout_mode = 0
offset_left = 47.5
offset_top = 2.5
offset_right = 87.5
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"

[node name="productionPerHour" type="Node" parent="."]

[node name="resourcesPerHour" type="Label" parent="productionPerHour"]
offset_left = 1.0
offset_top = 78.0
offset_right = 131.0
offset_bottom = 94.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.905882, 1, 0, 0.803922)
text = "RESOURCES / H"

[node name="food" type="Label" parent="productionPerHour"]
offset_left = 39.0
offset_top = 86.0
offset_right = 89.0
offset_bottom = 102.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "food:"
metadata/_edit_use_anchors_ = true

[node name="foodDataPPH" type="Label" parent="productionPerHour/food"]
layout_mode = 0
offset_left = 50.0
offset_top = 2.5
offset_right = 90.0
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"
metadata/_edit_use_anchors_ = true

[node name="water" type="Label" parent="productionPerHour"]
offset_left = 1.0
offset_top = 93.0
offset_right = 61.0
offset_bottom = 109.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "water:"
metadata/_edit_use_anchors_ = true

[node name="waterDataPPH" type="Label" parent="productionPerHour/water"]
layout_mode = 0
offset_left = 57.5
offset_top = 2.5
offset_right = 97.5
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"
metadata/_edit_use_anchors_ = true

[node name="metal" type="Label" parent="productionPerHour"]
offset_left = 1.0
offset_top = 86.0
offset_right = 61.0
offset_bottom = 102.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "metal:"
metadata/_edit_use_anchors_ = true

[node name="metalDataPPH" type="Label" parent="productionPerHour/metal"]
layout_mode = 0
offset_left = 57.5
offset_top = 2.5
offset_right = 97.5
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"
metadata/_edit_use_anchors_ = true

[node name="wood" type="Label" parent="productionPerHour"]
offset_left = 40.0
offset_top = 93.0
offset_right = 90.0
offset_bottom = 109.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "wood:"
metadata/_edit_use_anchors_ = true

[node name="woodDataPPH" type="Label" parent="productionPerHour/wood"]
layout_mode = 0
offset_left = 47.5
offset_top = 2.5
offset_right = 87.5
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"
metadata/_edit_use_anchors_ = true

[node name="maxResourceAmount" type="Node" parent="."]

[node name="maxResources" type="Label" parent="maxResourceAmount"]
offset_left = 2.0
offset_top = 110.0
offset_right = 152.0
offset_bottom = 126.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.905882, 1, 0, 0.803922)
text = "MAX - RESOURCES"

[node name="food" type="Label" parent="maxResourceAmount"]
offset_left = 39.0
offset_top = 117.0
offset_right = 89.0
offset_bottom = 133.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "food:"

[node name="foodDataMRA" type="Label" parent="maxResourceAmount/food"]
layout_mode = 0
offset_left = 50.0
offset_top = 2.5
offset_right = 90.0
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"

[node name="water" type="Label" parent="maxResourceAmount"]
offset_left = 1.0
offset_top = 124.0
offset_right = 61.0
offset_bottom = 140.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "water:"

[node name="waterDataMRA" type="Label" parent="maxResourceAmount/water"]
layout_mode = 0
offset_left = 57.5
offset_top = 2.5
offset_right = 97.5
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"

[node name="metal" type="Label" parent="maxResourceAmount"]
offset_left = 1.0
offset_top = 117.0
offset_right = 61.0
offset_bottom = 133.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "metal:"

[node name="metalDataMRA" type="Label" parent="maxResourceAmount/metal"]
layout_mode = 0
offset_left = 57.5
offset_top = 2.5
offset_right = 97.5
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"

[node name="wood" type="Label" parent="maxResourceAmount"]
offset_left = 40.0
offset_top = 124.0
offset_right = 90.0
offset_bottom = 140.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.654902, 0, 1, 0.603922)
text = "wood:"

[node name="woodDataMRA" type="Label" parent="maxResourceAmount/wood"]
layout_mode = 0
offset_left = 47.5
offset_top = 2.5
offset_right = 87.5
offset_bottom = 18.5
scale = Vector2(0.8, 0.8)
text = "5000"

[node name="field" type="Node" parent="."]

[node name="field1" type="Button" parent="field"]
clip_contents = true
offset_left = 129.0
offset_top = 16.0
offset_right = 161.0
offset_bottom = 47.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field2" type="Button" parent="field"]
clip_contents = true
offset_left = 97.0
offset_top = 48.0
offset_right = 131.0
offset_bottom = 80.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field3" type="Button" parent="field"]
clip_contents = true
offset_left = 131.0
offset_top = 47.0
offset_right = 177.0
offset_bottom = 80.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field4" type="Button" parent="field"]
clip_contents = true
offset_left = 97.0
offset_top = 96.0
offset_right = 129.0
offset_bottom = 128.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field5" type="Button" parent="field"]
clip_contents = true
offset_left = 305.0
offset_top = 192.0
offset_right = 337.0
offset_bottom = 240.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field6" type="Button" parent="field"]
clip_contents = true
offset_left = 337.0
offset_top = 176.0
offset_right = 369.0
offset_bottom = 208.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field7" type="Button" parent="field"]
clip_contents = true
offset_left = 305.0
offset_top = 64.0
offset_right = 337.0
offset_bottom = 128.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field8" type="Button" parent="field"]
clip_contents = true
offset_left = 224.0
offset_top = 16.0
offset_right = 242.0
offset_bottom = 80.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field9" type="Button" parent="field"]
clip_contents = true
offset_left = 193.0
offset_top = 16.0
offset_right = 224.0
offset_bottom = 48.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field10" type="Button" parent="field"]
clip_contents = true
offset_left = 97.0
offset_top = 176.0
offset_right = 145.0
offset_bottom = 208.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field11" type="Button" parent="field"]
clip_contents = true
offset_left = 145.0
offset_top = 208.0
offset_right = 177.0
offset_bottom = 240.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field12" type="Button" parent="field"]
clip_contents = true
offset_left = 113.0
offset_top = 224.0
offset_right = 145.0
offset_bottom = 256.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field13" type="Button" parent="field"]
clip_contents = true
offset_left = 193.0
offset_top = 208.0
offset_right = 241.0
offset_bottom = 240.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field14" type="Button" parent="field"]
clip_contents = true
offset_left = 97.0
offset_top = 141.0
offset_right = 145.0
offset_bottom = 165.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field15" type="Button" parent="field"]
clip_contents = true
offset_left = 257.0
offset_top = 32.0
offset_right = 289.0
offset_bottom = 64.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field16" type="Button" parent="field"]
clip_contents = true
offset_left = 353.0
offset_top = 64.0
offset_right = 385.0
offset_bottom = 108.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field17" type="Button" parent="field"]
clip_contents = true
offset_left = 353.0
offset_top = 108.0
offset_right = 385.0
offset_bottom = 160.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="field18" type="Button" parent="field"]
clip_contents = true
offset_left = 257.0
offset_top = 208.0
offset_right = 289.0
offset_bottom = 240.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
text = "0"
flat = true

[node name="Settlement" type="Node" parent="."]

[node name="settlement" type="Button" parent="Settlement"]
offset_left = 193.0
offset_top = 96.0
offset_right = 273.0
offset_bottom = 176.0
